--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
   <title>InstaDiff</title>
   <style>
     body {
-      width: 350px; /* Made slightly wider for buttons */
+      width: 350px;
       background-color: #121212;
       color: #FAFAFA;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -90,6 +90,15 @@
       font-size: 11px;
     }
     .btn-secondary:hover { background-color: #444; }
+
+    /* Reset Button */
+    .btn-reset {
+      background-color: transparent;
+      border: 1px solid #333;
+      color: #888;
+      margin-top: 10px;
+    }
+    .btn-reset:hover { border-color: #555; color: #ccc; }
     
     /* LINK STYLES */
     .user-row { border-bottom: 1px solid #222; }
@@ -176,6 +185,8 @@
           <button id="btn-download-txt" class="btn btn-secondary">Download Text</button>
         </div>
       </div>
+
+      <button id="btn-reset-scanner" class="btn btn-reset">Reset Scanner Data</button>
     </div>
 
     <div id="view-history" style="display: none;">
